--- a/config/reference.yaml
+++ b/config/reference.yaml
@@ -1,5 +1,7 @@
 # Reference YAML
+name: test # Note: will override saved models
 seed: 1 # Optional (Default: 0)
+debug: True # Optional (Default: False)
 wandb: # Optional
   project: test-project # Optional (Default: test-project)
   save_dir: __pycache__/ # Optional (Default: __pycache__/)
@@ -7,17 +9,19 @@ dataset:
   name: MURA
   kwargs: # Optional
     batch_size: 16
+    num_workers: 2
 model:
   name: test
+  dir_path: checkpoints/ # Optional (Default: checkpoints/)
   kwargs: # Optional
     num_classes: 1
   criterion:
     name: bce_logits
-    kwargs:
+    kwargs: # Optional
       reduction: mean
 train:
-  max_epochs: 1
+  max_epochs: 3 # Optional (Default: 1)
   optimizer:
     name: Adam
-    kwargs:
+    kwargs: # Optional
       lr: 1.e-6 # Note: to ensure floats are processed correctly in scientific format, use a decimal seperator
