Reworked experiment to use shared conda environment on HPC. Added explicit root directory for MIMIC CXR dataset. Added separate configuration files for testing on HPC. Removed old virtual environment references.

--- a/config/test_pretrain.yaml
+++ b/config/test_pretrain.yaml
@@ -1,5 +1,5 @@
 # Reference YAML
-name: test # Note: will override saved models
+name: test_pretrain # Note: will override saved models
 mode: pretrain # pretrain, downstream, or evaluate
 seed: 0 # Optional (Default: 0)
 debug: True # Optional (Default: False)
