--- a/config/baseline.yaml
+++ b/config/baseline.yaml
@@ -1,5 +1,5 @@
 # Reference YAML
-name: test # Note: will override saved models
+name: baseline # Note: will override saved models
 mode: pretrain # pretrain, downstream, or evaluate
 seed: 0 # Optional (Default: 0)
 debug: True # Optional (Default: False)
@@ -22,7 +22,7 @@ optimizer_kwargs:
 
 train:
   frac: 1.0 # Optional: (Default: 1.0)
-  max_epochs: 1 # Optional (Default: 1)
+  max_epochs: 5 # Optional (Default: 1)
 
 downstream:
   frac: 0.01 # Optional: (Default: 1.0)
