--- a/config/downstream_baseline_impressions.yaml
+++ b/config/downstream_baseline_impressions.yaml
@@ -28,7 +28,7 @@ train:
 
 
 downstream:
-  frac: 1.0 # Optional: (Default: 1.0)
+  frac: 0.1 # Optional: (Default: 1.0)
   dataset: MURA # MURA or CHEXPERT
   max_epochs: 30 # Optional (Default: 1)
-  
+  finetune: True  
